# solido

./: Cargo.toml
program/: Cargo.toml
program/src/: stake_account.rs  state.rs
